--- a/bio.html
+++ b/bio.html
@@ -42,8 +42,8 @@
       </a>
     
       <div class="row quotebar">
-        <p>"The beginning of wisdom is the statement 'I do not know'. The person who cannot make that statement is one who will never learn anything."</p>
-        <footer>Keith R.A. DeCandido</footer>
+        <p>"For small creatures such as we, the vastness is bearable only through love."</p>
+        <footer>~ Carl Sagan ~</footer>
       </div>
     </div> <!--end sidebar-->
 
